在耗材购买list显示界面判断当前用户是否为超级用户,只有超级用户才可以使用打印功能。

--- a/templates/admin/change_list_print.html
+++ b/templates/admin/change_list_print.html
@@ -1,5 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load i18n admin_urls admin_static admin_list %}
+{% load i18n admin_urls admin_static admin_list%}
 
 {% block extrahead %}
 {{ block.super }}
@@ -13,5 +13,7 @@ function  a(){
 
 {% block result_list %}
 {{ block.super }}
+{% if user.is_superuser %}
 <input class="btn btn-success" type="button" onclick=" a()" value="{% trans 'print' %}" />
+{% endif %}
 {% endblock %}
