添加一些操作，使本地静态文件可以被访问： 1.在url里添加static的访问路径 2.在settings里添加STATICFILES_DIRS变量设置为静态页面文件夹 3.在要使用相应js的文件里面添加load static语句

--- a/templates/admin/change_list_print.html
+++ b/templates/admin/change_list_print.html
@@ -1,8 +1,9 @@
 {% extends "admin/change_list.html" %}
-{% load i18n admin_urls admin_static admin_list%}
+{% load static i18n admin_urls admin_static admin_list%}
 
 {% block extrahead %}
 {{ block.super }}
+
 <script type="text/javascript" src="{% static "admin/js/jquery.jqprint.js" %}"></script>
 <script type="text/javascript">
 function  a(){
@@ -14,6 +15,6 @@ function  a(){
 {% block result_list %}
 {{ block.super }}
 {% if user.is_superuser %}
-<input class="btn btn-success" type="button" onclick=" a()" value="{% trans 'print' %}" />
+<input id="print_page" class="btn btn-success" type="button" onclick=" a()" value="{% trans 'print' %}" />
 {% endif %}
 {% endblock %}
