--- a/templates/admin/change_list_print.html
+++ b/templates/admin/change_list_print.html
@@ -1,20 +1,1 @@
-{% extends "admin/change_list.html" %}
-{% load static i18n admin_urls admin_static admin_list%}
-
-{% block extrahead %}
-{{ block.super }}
-
-<script type="text/javascript" src="{% static "admin/js/jquery.jqprint.js" %}"></script>
-<script type="text/javascript">
-function  a(){
-    $("#result_list").jqprint();
-}
-</script>
-{% endblock %}
-
-{% block result_list %}
-{{ block.super }}
-{% if user.is_superuser %}
-<input id="print_page" class="btn btn-success" type="button" onclick=" a()" value="{% trans 'print' %}" />
-{% endif %}
-{% endblock %}
+{% extends "admin/change_list.html" %}{% load static i18n admin_urls admin_static admin_list%}{% block extrahead %}{{ block.super }}<script type="text/javascript" src="{% static "admin/js/jquery.jqprint.js" %}"></script><script type="text/javascript" src="{% static "admin/js/jquery.migrate.js" %}"></script><script type="text/javascript">    function  a(){        $("#result_list").jqprint();    // }    }</script>{% endblock %}{% block result_list %}{{ block.super }}{% if user.is_superuser %}<input id="print_page" class="btn btn-success" type="button" onclick=" a()" value="{% trans 'print' %}" />{% endif %}{% endblock %}
