整理排版搜索显示input的html代码.

--- a/templates/admin/ajax_change_form.html
+++ b/templates/admin/ajax_change_form.html
@@ -50,7 +50,14 @@
 {% endif %}
 
 {% block field_sets %}
-    <div><div class="control-label"><label class="required" for="id_search_input">输入耗材:</label></div><div class="controls"><input class="form-control" id="id_search_input" name="search_input" type="text" required=""></div></div>
+    <div>
+        <div class="control-label">
+            <label class="required" for="id_search_input">输入耗材:</label>
+        </div>
+        <div class="controls">
+            <input class="form-control" id="id_search_input" name="search_input" type="text" required="">
+        </div>
+    </div>
     <div>
         <div class="control-label">
             <label class="required" for="id_search_input">可选结果:</label>
