1.添加jQuery多选插件selectize.js和相关css文件 2.在申请领用耗材页面中添加上述js和css文件,可正常显示

--- a/templates/admin/ajax_change_form.html
+++ b/templates/admin/ajax_change_form.html
@@ -4,6 +4,7 @@
 {% block extrahead %}{{ block.super }}
 <script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
 <script type="text/javascript" src="{% static "admin/js/jquery.ui.js" %}"></script>
+<script type="text/javascript" src="{% static "admin/js/selectize.js" %}"></script>
 <script>
     // alert('hello');
   $(function() {
@@ -20,8 +21,6 @@
                       data = JSON.parse(data);
                       $("#id_search_result").val(data[0].fields.name);
                       response(data);
-                      //TODO:需要修改返回数据的显示
-
                   },
               });
           }
@@ -36,6 +35,7 @@
 {% block extrastyle %}{{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}" />
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/jquery.ui.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/selectize.css" %}" />
 {% endblock %}
 
 
