--- a/templates/admin/ajax_change_form.html
+++ b/templates/admin/ajax_change_form.html
@@ -1,12 +1,11 @@
-{% extends "admin/base_site.html" %}
-{% load static i18n admin_static admin_urls static admin_modify %}
+{% extends "admin/change_form.html" %}
+{% load i18n admin_static admin_urls static admin_modify %}
 
 {% block extrahead %}{{ block.super }}
 <script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
 <script type="text/javascript" src="{% static "admin/js/jquery.ui.js" %}"></script>
 <script type="text/javascript" src="{% static "admin/js/selectize.js" %}"></script>
 <script>
-    // alert('hello');
   $(function() {
       // $("#id_search_input").autocomplete({
       //     source: function (request, response) {
@@ -36,7 +35,7 @@
 
 {% block extrastyle %}{{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}" />
-<!--    <link rel="stylesheet" type="text/css" href="{% static "admin/css/jquery.ui.css" %}" />-->
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/jquery.ui.css" %}" />
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/selectize.css" %}" />
 {% endblock %}
 
