修改版权信息细节

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -12,6 +12,6 @@
 
 <!-- footer下右边的版权信息 -->
 {% block copyright %}
-  {% trans "copyright" %}&copy; 2016 {% trans "szjj.info" %} <br>
+  {% trans "copyright" %}&copy; 2016-2024 {% trans "szjj.info" %} <br>
   {% trans "developed" %} by {% trans "info.trainning class" %}
 {% endblock %}
